grammar.js
    source_file: ($) =>
      repeat(choice($.namespace, $._top_level_item, $._statement)),

    _top_level_item: ($) =>
      choice(
        $.import_decl,
        $.export_decl,
        $.open_decl,
        $.callable_decl,
        $.newtype_decl,
        $.struct_decl
      ),

    // =====================================================================
    // Import / Export / Open
    // =====================================================================

    callable_decl: ($) =>
      seq(
        repeat($.attribute),
        optional("internal"),
        choice("operation", "function"),
        field("name", $.identifier),
        optional($.type_params),
        field("params", $.param_list),
        ":",
        field("return_type", $.type),
        optional($.functor_clause),
        field("body", $.callable_body)
      ),

    attribute: ($) =>
      seq("@", $.path_or_identifier, optional(seq("(", optional($._expression), ")"))),

    param_list: ($) => seq("(", optional(sep1($._param, ",")), ")"),

    _param: ($) => choice($.typed_param, $.tuple_param),

    typed_param: ($) =>
      seq(field("name", $.identifier), ":", field("type", $.type)),

    tuple_param: ($) => seq("(", sep1($._param, ","), ")"),

    functor_clause: ($) => seq("is", $.functor_expr),

    functor_expr: ($) =>
      choice(
        "Adj",
        "Ctl",
        prec.left(1, seq($.functor_expr, "+", $.functor_expr)),
        prec.left(2, seq($.functor_expr, "*", $.functor_expr)),
        seq("(", $.functor_expr, ")")
      ),

    callable_body: ($) => choice($.block, $.specialization_list),

    specialization_list: ($) => seq("{", repeat1($.specialization), "}"),

    specialization: ($) =>
      seq(
        $.spec_name,
        choice(
          seq($.spec_generator, ";"),
          seq(optional($.spec_param), $.block)
        )
      ),

    spec_name: ($) =>
      choice("body", "adjoint", seq("controlled", optional("adjoint"))),

    spec_param: ($) =>
      choice("...", seq("(", sep1(choice($.identifier, "..."), ","), ")")),

    // =====================================================================
    // Type declarations
    // =====================================================================

    struct_decl: ($) =>
      seq(optional("internal"), "struct", field("name", $.identifier), "{", optional(seq(sep1($.field_def, ","), optional(","))), "}"),

    field_def: ($) =>
      seq(field("name", $.identifier), ":", field("type", $.type)),

    // =====================================================================
    // Statements
    // =====================================================================

    _statement: ($) =>
      choice(
        $.let_statement,
        $.mutable_statement,
        $.set_statement,
        $.use_statement,
        $.borrow_statement,
        $.return_statement,
        $.fail_statement,
        $.import_decl,
        $.expression_statement,
        $.struct_decl,
        $.empty_statement
      ),

    let_statement: ($) =>
      seq("let", $.pattern, optional(seq(":", $.type)), "=", $._expression, ";"),

    mutable_statement: ($) =>
      seq("mutable", $.pattern, optional(seq(":", $.type)), "=", $._expression, ";"),

    // `set x = expr;`, `set x += expr;`, `set (a, b) = (1, 2);`
    set_statement: ($) => seq("set", $._expression, ";"),

    return_statement: ($) => seq("return", $._expression, ";"),

    fail_statement: ($) => seq("fail", $._expression, ";"),

    expression_statement: ($) =>
      choice(
        seq($._expression_no_block, ";"),
        $._expression_with_block,
        // Q# allows omitting trailing semicolons for the last expression in a block
        prec(-1, $._expression_no_block)
      ),

    empty_statement: (_) => ";",

    // =====================================================================
    // Qubit initializers
    // =====================================================================

    pattern: ($) =>
      choice(
        $.identifier,
        $.discard,
        seq("(", sep1($.pattern, ","), ")")
      ),

    builtin_type: (_) =>
      choice("Unit", "Int", "BigInt", "Double", "Bool", "String", "Qubit", "Result", "Pauli", "Range"),

    _expression: ($) =>
      choice($._expression_no_block, $._expression_with_block),

    _expression_no_block: ($) =>
      choice(
        $.identifier,
        $.path,
        $.literal,
        $.parenthesized_expression,
        $.unit_expression,
        $.tuple_expression,
        $.array_expression,
        $.array_repeat_expression,
        $.string_interpolation,
        $.unary_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expression,
        $.update_expression,
        $.ternary_expression,
        $.call_expression,
        $.index_expression,
        $.field_expression,
        $.unwrap_expression,
        $.lambda_expression,
        $.range_expression,
        $.step_range_expression,
        $.open_range_start,
        $.open_range_end,
        $.full_range,
        $.new_expression,
        $.discard
      ),

    _expression_with_block: ($) =>
      choice(
        $.block,
        $.if_expression,
        $.for_expression,
        $.while_expression,
        $.repeat_expression,
        $.conjugation_expression
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    tuple_expression: ($) =>
      seq("(", $._expression, ",", optional(sep1($._expression, ",")), ")"),

    array_expression: ($) =>
      seq("[", optional(sep1($._expression, ",")), "]"),

    array_repeat_expression: ($) =>
      seq("[", $._expression, ",", "size", "=", $._expression, "]"),

    string_interpolation: ($) =>
      seq('$"', repeat(choice($.interpolation_content, $.interpolation_expression)), '"'),

    interpolation_content: (_) => /[^"{}\\]+|\\./,

    interpolation_expression: ($) => seq("{", $._expression, "}"),

    // --- Operators ---

    unary_expression: ($) =>
      choice(
        prec(PREC.PREFIX, seq(choice("-", "+", "not", "~~~"), $._expression)),
        prec(PREC.FUNCTOR, seq(choice("Adjoint", "Controlled"), $._expression))
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "or", $._expression)),
        prec.left(PREC.AND, seq($._expression, "and", $._expression)),
        prec.left(PREC.EQUALITY, seq($._expression, choice("==", "!="), $._expression)),
        prec.left(PREC.COMPARE_LTE, seq($._expression, "<=", $._expression)),
        prec.left(PREC.COMPARISON, seq($._expression, choice("<", ">", ">="), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, "|||", $._expression)),
        prec.left(PREC.BIT_XOR, seq($._expression, "^^^", $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, "&&&", $._expression)),
        prec.left(PREC.SHIFT, seq($._expression, choice("<<<", ">>>"), $._expression)),
        prec.left(PREC.ADD, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.MUL, seq($._expression, choice("*", "/", "%"), $._expression)),
        prec.right(PREC.EXP, seq($._expression, "^", $._expression))
      ),

    assignment_expression: ($) =>
      prec.right(PREC.ASSIGN, seq($._expression, "=", $._expression)),

    compound_assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          $._expression,
          choice("+=", "-=", "*=", "/=", "%=", "^=", "&&&=", "|||=", "^^^=", "<<<=", ">>>=", "and=", "or=", "w/="),
          $._expression
        )
      ),

    call_expression: ($) =>
      prec(PREC.CALL, seq($._expression, "(", optional(sep1($._expression, ",")), ")")),

    field_expression: ($) =>
      prec(PREC.ACCESS, seq($._expression, choice(".", "::"), field("field", $.identifier))),

    new_expression: ($) =>
      choice(
        seq("new", $.path_or_identifier, "{", optional($.struct_fields), "}"),
        seq("new", $.type, "[", $._expression, "]")
      ),

    struct_fields: ($) =>
      choice(
        seq("...", $._expression, optional(seq(",", sep1($.field_assign, ","), optional(",")))),
        seq(sep1($.field_assign, ","), optional(","))
      ),

    field_assign: ($) =>
      seq(field("name", $.identifier), "=", field("value", $._expression)),

    // --- Block expressions ---

    block: ($) => seq("{", repeat($._statement), "}"),

    if_expression: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        field("body", $.block),
        repeat($.elif_clause),
        optional($.else_clause)
      ),

    elif_clause: ($) =>
      seq("elif", field("condition", $._expression), field("body", $.block)),

    else_clause: ($) => seq("else", $.block),

    path_or_identifier: ($) => choice($.path, $.identifier),

    path: ($) => prec.left(seq($.identifier, repeat1(seq(".", $.identifier)))),

    // =====================================================================
    // Literals
    // =====================================================================

    integer_literal: (_) =>
      token(choice(/0[bB][01_]+/, /0[oO][0-7_]+/, /0[xX][0-9a-fA-F_]+/, /[0-9][0-9_]*/)),

    string_literal: (_) => token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
